--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ discord.py==1.7.3
 idna==2.10
 multidict==5.1.0
 Pillow==8.2.0
+python-decouple==3.5
 requests==2.25.1
 typing-extensions==3.10.0.0
 urllib3==1.26.5
